--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="logotip.ico" type="img/ico">
+<!--    добавляем ico-->
     <title>Document</title>
 <!--&lt;!&ndash;    <script src="src/analytics.js"></script>&ndash;&gt;отключаем после подключения второй точки входа-->
     <!--    сторонний скрипт с аналитикой-->
@@ -13,10 +15,21 @@
     <!--    удаляем все скрипты после подключения плагина HTMLWebpackPlugin -&#45;&#45; он это делает автоматически за нас-->
 </head>
 <body>
+
 <div class="container">
     <h1> I LEARNING WEBPACK </h1>
     <hr>
-    <div class="logo"></div>
+    <div class="logo" >Hello Taras</div>
+    <hr>
+    <pre></pre>
+    <hr>
+    <div class="box">
+        <h2> Less </h2>
+    </div>
+    <div class="card">
+        <h2> Sass(scss) </h2>
+    </div>
+
 <!--    нет никаких импортов экспортов и нужно следить чтобы скрипты были подключены в определенном порядке-->
 <!--    <script src="src/Post.js"></script>отключаем скрипты после подключения вебпак-->
 <!--    сначала подключаем модель-->
