continue study configuration webpack

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="logotip.ico" type="img/ico">
 <!--    добавляем ico-->
     <title>Document</title>
-<!--&lt;!&ndash;    <script src="src/analytics.js"></script>&ndash;&gt;отключаем после подключения второй точки входа-->
+<!--&lt;!&ndash;    <script src="src/analytics.ts"></script>&ndash;&gt;отключаем после подключения второй точки входа-->
     <!--    сторонний скрипт с аналитикой-->
 <!--    подключаем разные точки входа-->
 <!--    <script src="../dist/analytics.bundle.js"></script>-->
@@ -16,24 +16,29 @@
 </head>
 <body>
 
-<div class="container">
-    <h1> I LEARNING WEBPACK </h1>
-    <hr>
-    <div class="logo" >Hello Taras</div>
-    <hr>
-    <pre></pre>
-    <hr>
-    <div class="box">
-        <h2> Less </h2>
-    </div>
-    <div class="card">
-        <h2> Sass(scss) </h2>
-    </div>
+<!--<div class="container">-->
+<!--    <h1> I LEARNING WEBPACK </h1>-->
+<!--    <hr>-->
+<!--    <div class="logo" >Hello Taras</div>-->
+<!--    <hr>-->
+<!--    <pre></pre>-->
+<!--    <hr>-->
+<!--    <div class="box">-->
+<!--        <h2> Less </h2>-->
+<!--    </div>-->
+<!--    <div class="card">-->
+<!--        <h2> Sass </h2>-->
+<!--    </div>-->
+
+
+<!--Подключаем react-->
+<div class="app"></div>
+
 
 <!--    нет никаких импортов экспортов и нужно следить чтобы скрипты были подключены в определенном порядке-->
 <!--    <script src="src/Post.js"></script>отключаем скрипты после подключения вебпак-->
 <!--    сначала подключаем модель-->
-<!--    <script src="src/index.js"></script> отключаем скрипты после подключения вебпак-->
+<!--    <script src="src/index.jsx"></script> отключаем скрипты после подключения вебпак-->
 <!--    // подключаем новые посты-->
 <!--    <script src="bundle.js"></script>-->
     <!--    подключаем разные точки входа-->
